# AI_Interviewer

./: .gitignore  README.md  interview_transcripts.db  pyproject.toml  requirements.txt  run_app.py
backend/: database.py  db_operations.py  evaluator.py  interviewer.py  main.py  models.py  pdf_gen.py  prompt.py
frontend/: app.py
